Fixed horizontal scrollbar issue when nearing 500px width

--- a/less/index.less
+++ b/less/index.less
@@ -158,6 +158,17 @@ footer {
 		}
 	}
 
+	//Tablet
+	@media (max-width: 700px) {
+		.layout(center, center, column);
+		nav {
+			width: 100%;
+			justify-content: space-evenly;
+			margin-top: 3%;
+		}
+	}
+
+	//mobile
 	@media (max-width: 500px) {
 		.layout(center, center, column);
 		margin: 1% 0;
